Limit max-height to prevent overflow

--- a/client/homebrew/brewRenderer/headerNav/headerNav.less
+++ b/client/homebrew/brewRenderer/headerNav/headerNav.less
@@ -5,7 +5,7 @@
 	padding: 5px 10px;
 	background-color: #ccc;
 	border-radius: 5px;
-	max-height: 100vh;
+	max-height: calc(100vh - 32px);
 	max-width: 40vw;
 	overflow-y: auto;
     &.active {
